<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FDFDFD">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="?attr/actionBarSize"
            app:popupTheme="@style/Theme.TitleBar.PopupOverlay"
            app:menu="@menu/topbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ftextfield"
                android:drawablePadding="8dp"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/id"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ftextfield"
                android:drawablePadding="8dp"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userPs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ps"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ftextfield"
                android:drawablePadding="8dp"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userPsConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ps_confirm"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ftextfield"
                android:drawablePadding="8dp"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/protector"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protector"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:background="@drawable/arrow_right">
            </ImageView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:textStyle="bold"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="수정하기"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/solid_btn_con" />

</LinearLayout>